# grinbot

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yml  dockerfile  logging.yml
core/: Cargo.toml
core/src/: lib.rs  service.rs  template.rs
core/src/controller/: dispatch.rs  mod.rs  types.rs
core/src/service/: grin.rs  mod.rs  types.rs
core/src/template/: mod.rs  templates.rs
core/templates/: help.html  seed.html
keybase-service/: Cargo.toml
keybase-service/src/: lib.rs
keybase-service/src/keybase/: keybase.rs  mod.rs  types.rs
scripts/: docker_entrypoint.sh
src/: controller.rs  main.rs  service.rs  template.rs  types.rs
src/controller/: dispatch.rs  types.rs
src/service/: grin.rs  keybase.rs  telegram.rs  types.rs
src/service/keybase/: keybase.rs  types.rs
src/service/telegram/: telegram.rs
src/template/: seed.rs  send.rs  templates.rs
telegram-service/: Cargo.toml
telegram-service/src/: lib.rs
telegram-service/src/telegram/: mod.rs  telegram.rs
templates/: help.html  info-success.html  seed.html  send-success.html
