[package]
name = "grinbot"
version = "0.0.1"
authors = ["Alex Byrnes"]
edition = "2018"

[dependencies]
telegram-bot = "0.6.3"
tokio = "0.1.11"
tokio-core = "0.1"
futures = "0.1"
serde_json = "1.0.40"
serde = "1.0.99"
reqwest = "0.9.1"
redux-rs = "0.1.0"
askama = "0.8.0"
url = "2.1.0"
grin_wallet_libwallet = { git = "https://github.com/mimblewimble/grin-wallet", tag = "v2.0.0" }
