[package]
name = "grinbot"
version = "0.0.1"
authors = ["Alex Byrnes"]

license = "MIT"
description = "Telegram bot for Grin"
homepage = "https://github.com/alexbyrnes/grinbot"
documentation = "https://github.com/alexbyrnes/grinbot"
repository = "https://github.com/alexbyrnes/grinbot"
keywords = [ "cryptocurrency", "blockchain", "wallet", "chatbot", "mimblewimble", "grin" ]
categories = [ "cryptography::cryptocurrencies" ]
readme = "README.md"
edition = "2018"

[workspace]
members = ["core", "telegram-service"]

[dependencies]
telegram_service = { path = "./telegram-service/", version= "0.0.1"}
grinbot_core = { path = "./core/", version= "0.0.1"}
clap = { version = "2.31", features = ["yaml"] }
yaml-rust = "0.4.3"

