[package]
name = "grinbot_core"
version = "0.1.0-alpha.1"
authors = ["Alex Byrnes <alexbyrnes@protonmail.com>"]
license = "MIT"
description = "Keybase and Telegram bot for Grin: Core library"
homepage = "https://github.com/alexbyrnes/grinbot"
documentation = "https://github.com/alexbyrnes/grinbot"
repository = "https://github.com/alexbyrnes/grinbot"
keywords = [ "cryptocurrency", "blockchain", "chatbot", "mimblewimble", "grin" ]
categories = [ "cryptography::cryptocurrencies" ]
edition = "2018"

[dependencies]
redux-rs = "0.1.0"
url = "2.1.0"
log = "0.4.8"
log4rs = "0.8.3"
askama = "0.8.0"
serde_json = "1.0.40"
serde = "1.0.99"
grin_wallet_libwallet = "3.0.0"
reqwest = "0.9.1"
