[package]
name = "grinbot_keybase_service"
version = "0.1.0-alpha.1"
authors = ["Alex Byrnes <alexbyrnes@protonmail.com>"]
license = "MIT"
description = "Keybase and Telegram bot for Grin: Keybase service"
homepage = "https://github.com/alexbyrnes/grinbot"
documentation = "https://github.com/alexbyrnes/grinbot"
repository = "https://github.com/alexbyrnes/grinbot"
keywords = [ "cryptocurrency", "blockchain", "wallet", "chatbot", "mimblewimble", "grin" ]
categories = [ "cryptography::cryptocurrencies" ]
readme = "README.md"
edition = "2018"

[dependencies]
tokio = "0.1.11"
tokio-core = "0.1"
futures-preview = "0.3.0-alpha.18"
grinbot_core = { path = "../core/", version= "0.1.0-alpha.1"}
reqwest = "0.9.1"
redux-rs = "0.1.0"
log = "0.4.8"
log4rs = "0.8.3"
serde_json = "1.0.40"
serde = "1.0.99"
keybase-bot-api = "0.4.1"
keybase-protocol = "0.1.0"
regex = "1.3.1"
