[package]
name = "telegram_service"
version = "0.0.1"
authors = ["Alex Byrnes <alexbyrnes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1.11"
tokio-core = "0.1"
futures = "0.1"
telegram-bot = "0.6.3"
grinbot_core = { path = "../core/", version= "0.0.1"}
reqwest = "0.9.1"
redux-rs = "0.1.0"
log = "0.4.8"
log4rs = "0.8.3"
serde_json = "1.0.40"
serde = "1.0.99"

